Fix Icon Alignment

--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -5,7 +5,7 @@
   stroke-width: 0;
   stroke: currentColor;
   fill: currentColor;
-  vertical-align: bottom;
+  vertical-align: middle;
 }
 
 /* ==========================================
